--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Predication</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/cloudy.png" type="image/x-icon">
+    <link rel="shortcut icon" href="cloudy.png" type="image/x-icon">
 </head>
 <body>
     <div class="card">
@@ -18,19 +18,19 @@
             <p>Enter Valid Name </p>
         </div>
         <div class="weather">
-            <img src="images/rain.png" alt="ad" class="weather-icon">
+            <img src="rain.png" alt="ad" class="weather-icon">
             <h1 class="temp">22°C</h1>
-            <h2 class="city">New Mumbai</h2>
+            <h2 class="city">Mumbai</h2>
             <div class="details">
                 <div class="col">
-                    <img src="images/humidity.png" alt="">
+                    <img src="humidity.png" alt="">
                     <div>
                         <p class="humidity">50%</p>
                         <P>Humidity</P>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="images/wind.png" alt="">
+                    <img src="wind.png" alt="">
                     <div>
                         <p class="wind">15 Km/Hr</p>
                         <P>Wind Speed</P>
@@ -66,19 +66,19 @@
                     weathericon.src="images/clouds.png";
                 }
                 else if(data.weather[0].main=="Clear"){
-                    weathericon.src="images/clear.png.png";
+                    weathericon.src="clear.png.png";
                 }
                 else if(data.weather[0].main=="Drizzle"){
-                    weathericon.src="images/drizzle.png.png";
+                    weathericon.src="drizzle.png.png";
                 }
                 else if(data.weather[0].main=="Mist"){
-                    weathericon.src="images/mist.png.png";
+                    weathericon.src="mist.png.png";
                 }
                 else if(data.weather[0].main=="Rain"){
-                    weathericon.src="images/rain.png.png";
+                    weathericon.src="rain.png.png";
                 }
                 else if(data.weather[0].main=="Snow"){
-                    weathericon.src="images/snow.png.png";
+                    weathericon.src="snow.png.png";
                 }
                 document.querySelector(".weather").style.display="block";
                 document.querySelector(".error").style.display="none";
