--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
                     weathericon.src="clouds.png";
                 }
                 else if(data.weather[0].main=="Clear"){
-                    weathericon.src="clear.png.png";
+                    weathericon.src="clear.png";
                 }
                 else if(data.weather[0].main=="Drizzle"){
-                    weathericon.src="drizzle.png.png";
+                    weathericon.src="drizzle.png";
                 }
                 else if(data.weather[0].main=="Mist"){
-                    weathericon.src="mist.png.png";
+                    weathericon.src="mist.png";
                 }
                 else if(data.weather[0].main=="Rain"){
-                    weathericon.src="rain.png.png";
+                    weathericon.src="rain.png";
                 }
                 else if(data.weather[0].main=="Snow"){
-                    weathericon.src="snow.png.png";
+                    weathericon.src="snow.png";
                 }
                 document.querySelector(".weather").style.display="block";
                 document.querySelector(".error").style.display="none";
